# ragedb

./: .clang-format  .dockerignore  .gdbinit  .gitignore  .gitmodules  .graphifyignore  CMakeLists.txt  CMakeUserPresets.json  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-arm64  Dockerhub.md  GQL.md  INDEX.MD  NOTICE.txt  OPTIMIZER.md  QUERY_PLANS.md  QUERY_PLAN_OPERATORS.md  README.md  SEMANTIC_LAYER.md  SEMANTIC_OPTIMIZER.md  THIRD-PARTY.txt  WCOJ.md  build.sh  conanfile.txt  docker-compose.yml  download  index-ideas.txt  main.tf  sonar-project.properties
.claude/: settings.json
.github/workflows/: cmake.yml  coverage.yml  toolchain.yml
cmake/: Conan.cmake  FindLuaJIT.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
docs/: API.md  GQL.md  SEMANTIC_LAYER.md  SEMANTIC_MODELING.md  SEMANTIC_OPTIMIZER.md
examples/: 50m_relationship_traversal_bulk.lua  50m_relationship_traversal_one_by_one.lua  html.lua  load_csv.lua  node_and_relationship_creation.lua  node_and_relationship_creation.txt  node_and_relationship_type_creation.lua  node_and_relationship_type_creation.txt  simple.csv
lua/: README.md  json.lua
public/: index.html
public/css/: bulma-tooltip.min.css  custom.css  ragedb_styles.css
public/js/: bulma-collapsible.js  force-graph.min.js  gridjs52.umd.js  ragedb.js  (+1 more)
src/: Templates.h
src/benchmark/: CMakeLists.txt  README.md  intersection.cpp  multi_set_intersection.cpp  one_example.cpp
src/graph/: CMakeLists.txt  Direction.h  Expression.h  FullTextIndex.h  Graph.cpp  Graph.h  Group.cpp  Group.h  Join.h  Link.cpp  Link.h  Load.cpp  Lua.h  Node.cpp  Node.h  NodeTypes.cpp  NodeTypes.h  Operation.h  Order.h  Permission.h  Properties.cpp  Properties.h  PropertyIndex.h  PropertyType.h  Relationship.cpp  Relationship.h  RelationshipTypes.cpp  RelationshipTypes.h  Roar.cpp  Roar.h  Sandbox.cpp  Sandbox.h  Shard.cpp  Shard.h  Sort.h  Types.cpp  Types.h  Uniqueness.h  graph.cpp  graph.h
src/graph/algorithms/: Centrality.cpp  Clustering.cpp  Community.cpp  Connectivity.cpp  Distance.cpp  Similarity.cpp
src/graph/eve/: CollectIndexes.h  FilterLinks.h
src/graph/lua/: All.cpp  Bulk.cpp  Connected.cpp  Degrees.cpp  Difference.cpp  Filter.cpp  Find.cpp  Helpers.cpp  Intersect.cpp  Invert.cpp  Join.cpp  KHop.cpp  LoadCSV.cpp  Neighbors.cpp  Node.cpp  Nodes.cpp  Relationship.cpp  Relationships.cpp  ShortestPath.cpp  Traversing.cpp  Triangles.cpp  Types.cpp
src/graph/node/: Filter.cpp  Find.cpp
src/graph/overload/: Degree.cpp  Disambiguate.cpp  Disambiguate.h  Intersect.cpp  Key.cpp  Links.cpp  NeighborIds.cpp  Neighbors.cpp  Node.cpp  NodesGet.cpp  Properties.cpp  Property.cpp  Relationship.cpp  RelationshipProperties.cpp  RelationshipProperty.cpp  RelationshipType.cpp  Relationships.cpp  Type.cpp
src/graph/paths/: Path.cpp  Path.h  WeightedLink.cpp  WeightedLink.h  WeightedPath.cpp  WeightedPath.h
src/graph/peered/: All.cpp  Bulk.cpp  Connected.cpp  Degrees.cpp  Difference.cpp  Filter.cpp  Find.cpp  Helpers.cpp  Intersect.cpp  KHop.cpp  LoadCSV.cpp  Neighbors.cpp  Node.cpp  Nodes.cpp  Relationship.cpp  Relationships.cpp  Restore.cpp  ShortestPath.cpp  Traversing.cpp  Types.cpp
src/graph/relationship/: Filter.cpp  Find.cpp
src/graph/shard/: All.cpp  Bulk.cpp  Degrees.cpp  Filter.cpp  Find.cpp  Helpers.cpp  Ids.cpp  Index.cpp  LoadCSV.cpp  Neighbors.cpp  Node.cpp  NodeLinks.cpp  Nodes.cpp  Relationship.cpp  Relationships.cpp  Traversing.cpp  Types.cpp
src/graph/types/: Date.cpp  Date.h
temp/: Graphs.cpp  Graphs.h
test/: CMakeLists.txt  Graph.cpp  Link.cpp  Node.cpp  Properties.cpp  catch_main.cpp  test_gql.py  tests.cpp
test/gql/: GqlExecutorAggregationTests.cpp  GqlExecutorComplexTests.cpp  GqlExecutorExplainProfileTests.cpp  GqlExecutorFtsTests.cpp  GqlExecutorHoneycombTests.cpp  GqlExecutorKHopTests.cpp  GqlExecutorPatternTests.cpp  GqlExecutorReadTests.cpp  GqlExecutorSchemaTests.cpp  GqlExecutorShortestPathTests.cpp  GqlExecutorSubqueryTests.cpp  GqlExecutorTests.cpp  GqlExecutorWriteTests.cpp  GqlOptimizerPerformanceTests.cpp  GqlOptimizerTests.cpp  GqlParserTests.cpp  GqlQueryCacheTests.cpp  GqlTokenizerTests.cpp  GqlTypecheckerTests.cpp
test/gql/optimizer/: AlgebraicRewriterTests.cpp  AlglibOptimizerTests.cpp  AutomorphicSymmetryOptimizerTests.cpp  BasicOptimizerTests.cpp  CardinalityShortCircuiterTests.cpp  ContradictionPrunerTests.cpp  DomainConstraintReasonerTests.cpp  FunctionalDependencyPrunerTests.cpp  JoinEliminatorTests.cpp  Phase11_15OptimizerTests.cpp  Phase16_21OptimizerTests.cpp  SubsumptionPrunerTests.cpp  TransitiveReachabilityPrunerTests.cpp
test/gql/optimizer_performance/: AlgebraicPerformanceTests.cpp  AlglibPerformanceTests.cpp  AntiSemiJoinPerformanceTests.cpp  AutomorphicSymmetryPerformanceTests.cpp  CardinalityPerformanceTests.cpp  CompositeDomainPerformanceTests.cpp  ContradictionPerformanceTests.cpp  DegreeConstraintPerformanceTests.cpp  DirectionSwapPerformanceTests.cpp  DisjointConceptPerformanceTests.cpp  EdgeContradictionPerformanceTests.cpp  EqualityJoinPerformanceTests.cpp  FunctionalDependencyPerformanceTests.cpp  JoinEliminationPerformanceTests.cpp  LimitPushdownPerformanceTests.cpp  OptionalMatchPerformanceTests.cpp  PerformanceHelper.h  Phase11_15PerformanceTests.cpp  SchemaReachabilityPerformanceTests.cpp  SubsumptionPerformanceTests.cpp  TransitiveFilterPerformanceTests.cpp  TransitiveReachabilityPerformanceTests.cpp  UniqueJoinPerformanceTests.cpp
test/lua/: date.lua  json.lua
test/main/: ConnectedHandler.cpp
test/pyrage/: test_alglib.py  test_base_concepts.py  test_declare_concepts.py  test_gql_compilation.py  test_graph_algorithms.py  test_reasoning.py  test_requirements.py
test/shard/: AllNodes.cpp  AllRelationships.cpp  Ids.cpp  Index.cpp  KHopTests.cpp  NodeDegrees.cpp  NodeProperties.cpp  NodeTypes.cpp  Nodes.cpp  RelationshipProperties.cpp  RelationshipTypes.cpp  Relationships.cpp  ShardIds.cpp  Shards.cpp  ShortestPath.cpp  ShortestPathTests.cpp
test/shard/algorithms/: Centrality.cpp  Clustering.cpp  Community.cpp  Connectivity.cpp  Distance.cpp  Similarity.cpp
test/types/: Date.cpp
(+155 files in other folders)
